fix type error and height in SelectionInput, adjust spacings, and correct arrow directions in CustomPagination

--- a/template/src/components/Atoms/TextInput/styles.module.scss
+++ b/template/src/components/Atoms/TextInput/styles.module.scss
@@ -57,7 +57,7 @@
   .withPrefix {
     > input,
     textarea {
-      padding-inline-start: 38px !important;
+      padding-inline-start: 42px !important;
       font-size: 16px;
     }
   }
