--- a/template/src/components/Templates/DashboardLayout/styles.module.scss
+++ b/template/src/components/Templates/DashboardLayout/styles.module.scss
@@ -12,6 +12,7 @@
 
 .mainContainer {
   margin-inline-start: 20%;
+  min-height: 100vh;
   .headerStyle {
     height: 88px;
     padding: 0;
